fixed header footer button spacing

--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ body {
 }
 
 .links div {
-    margin: 20px;
+    margin: 30px 130px;
     width: 200px;
     padding: 20px;
     display: inline-block;
